Add additional casks

--- a/lib/Brewfile
+++ b/lib/Brewfile
@@ -3,6 +3,7 @@ tap 'caskroom/cask'
 
 # CLI Utilities
 echo '📦 Installing CLI Tools'
+brew 'bash-completion'
 brew 'git'
 brew 'libdvdcss'
 brew 'trash'
@@ -23,10 +24,13 @@ cask 'doxie'
 cask 'firefox'
 cask 'google-chrome'
 cask 'handbrake'
+cask 'iina'
 cask 'imazing'
 cask 'imazing-mini'
 cask 'kaleidoscope'
 cask 'little-snitch'
+cask 'makemkv'
+cask 'max'
 cask 'micro-snitch'
 cask 'rescuetime'
 cask 'rocket'
